--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					</aside>
 				</section>
 				<section>
-					<img src="/img/useful redux.jpg" />
+					<img src="./img/useful redux.jpg" />
 					<aside class="notes">
 						<p>
 							This is typical architecture of React app. Data goes down to the child Components through properties.The child components usr functions(are pased by parent) to inform about state changes. Redux is technology that separate state form user interface. Each component can interfere withstore directly.
@@ -225,6 +225,9 @@
 					<aside class="notes">
 						<p>Delete "orange". Dispatch deleteFruit action. Store was changed</p>
 					</aside>
+				</section>
+				<section class="end">
+					<h3>The end</h3>
 				</section>
 			</section>
 		</div>
